# lab

./: .dockerignore  .env.example  .gitignore  .mcp.json  .worktreeinclude  CHANGELOG.md  CLAUDE.md  Cargo.toml  FUTURE.md  Justfile  LICENSE-MIT  README.md  clippy.toml  config.example.toml  deny.toml  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml  lefthook.yml  openapi.yaml  renovate.json
crates/lab/: CLAUDE.md  Cargo.toml  README.md
crates/lab-apis/: CLAUDE.md  Cargo.toml  README.md
crates/lab-apis/src/: acp.rs  acp_registry.rs  adguard.rs  apprise.rs  arcane.rs  beads.rs  bytestash.rs  core.rs  deploy.rs  device_runtime.rs  dozzle.rs  extract.rs  freshrss.rs  glances.rs  gotify.rs  immich.rs  jellyfin.rs  lib.rs  linkding.rs  loggifly.rs  marketplace.rs  mcpregistry.rs  memos.rs  navidrome.rs  neo4j.rs  notebooklm.rs  openacp.rs  openai.rs  overseerr.rs  paperless.rs  pihole.rs  plex.rs  prowlarr.rs  qbittorrent.rs  qdrant.rs  radarr.rs  sabnzbd.rs  scrutiny.rs  servarr.rs  setup.rs  (+8 more)
crates/lab-apis/src/acp/: error.rs  persistence.rs  session.rs  types.rs
crates/lab-apis/src/acp_registry/: client.rs  types.rs
crates/lab-apis/src/adguard/: client.rs  error.rs  types.rs
crates/lab-apis/src/apprise/: client.rs  error.rs  types.rs
crates/lab-apis/src/arcane/: client.rs  types.rs
crates/lab-apis/src/beads/: client.rs  error.rs  types.rs
crates/lab-apis/src/bytestash/: client.rs  error.rs  types.rs
crates/lab-apis/src/core/: CLAUDE.md  action.rs  auth.rs  error.rs  http.rs  plugin.rs  plugin_ui.rs  ssh.rs  status.rs  traits.rs
crates/lab-apis/src/deploy/: error.rs  types.rs
crates/lab-apis/src/device_runtime/: client.rs  types.rs
crates/lab-apis/src/doctor/: client.rs
crates/lab-apis/src/dozzle/: client.rs  error.rs  types.rs
crates/lab-apis/src/extract/: CLAUDE.md  client.rs  error.rs  fleet.rs  inventory.rs  parsers.rs  probe.rs  runtime.rs  ssh_config.rs  transport.rs  types.rs
crates/lab-apis/src/freshrss/: client.rs  error.rs  types.rs
crates/lab-apis/src/glances/: client.rs  error.rs  types.rs
crates/lab-apis/src/gotify/: client.rs  error.rs  types.rs
crates/lab-apis/src/immich/: client.rs  error.rs  types.rs
crates/lab-apis/src/jellyfin/: client.rs  error.rs  types.rs
crates/lab-apis/src/linkding/: client.rs  error.rs  types.rs
crates/lab-apis/src/loggifly/: client.rs  error.rs  types.rs
crates/lab-apis/src/marketplace/: types.rs
crates/lab-apis/src/mcpregistry/: client.rs  error.rs  types.rs
crates/lab-apis/src/memos/: client.rs  error.rs  types.rs
crates/lab-apis/src/navidrome/: client.rs  error.rs  types.rs
crates/lab-apis/src/neo4j/: client.rs  error.rs  types.rs
crates/lab-apis/src/notebooklm/: client.rs  error.rs  types.rs
crates/lab-apis/src/openacp/: client.rs  error.rs  types.rs
crates/lab-apis/src/openai/: client.rs  error.rs  types.rs
crates/lab-apis/src/overseerr/: client.rs  error.rs  types.rs
crates/lab-apis/src/paperless/: client.rs  error.rs  types.rs
crates/lab-apis/src/pihole/: client.rs  error.rs  types.rs
crates/lab-apis/src/plex/: client.rs  error.rs  types.rs
crates/lab-apis/src/prowlarr/: client.rs  error.rs  types.rs
crates/lab-apis/src/qbittorrent/: client.rs  error.rs  types.rs
crates/lab-apis/src/qdrant/: client.rs  error.rs  types.rs
crates/lab-apis/src/radarr/: client.rs  error.rs  types.rs
crates/lab-apis/src/sabnzbd/: client.rs  error.rs  types.rs
crates/lab-apis/src/scrutiny/: client.rs  error.rs  types.rs
crates/lab-apis/src/servarr/: CLAUDE.md  types.rs
crates/lab-apis/src/setup/: client.rs  types.rs
crates/lab-apis/src/sonarr/: client.rs  error.rs  types.rs
crates/lab-apis/src/stash/: types.rs
crates/lab-apis/src/tailscale/: client.rs  error.rs  types.rs
crates/lab-apis/src/tautulli/: client.rs  error.rs  types.rs
crates/lab-apis/src/tei/: client.rs  error.rs  types.rs
crates/lab-apis/tests/: acp_types.rs  adguard_client.rs  apprise_client.rs  beads_client.rs  dozzle_client.rs  freshrss_client.rs  glances_client.rs  gotify_client.rs  http_client.rs  immich_client.rs  jellyfin_client.rs  linkding_client.rs  loggifly_client.rs  memos_client.rs  navidrome_client.rs  neo4j_client.rs  openacp_client.rs  overseerr_client.rs  paperless_client.rs  pihole_client.rs  plex_client.rs  prowlarr_client.rs  qbittorrent_client.rs  qdrant_client.rs  radarr_client.rs  radarr_health.rs  sabnzbd_client.rs  scrutiny_client.rs  sonarr_client.rs  tailscale_client.rs  tautulli_client.rs  tei_client.rs  unifi_client.rs  unraid_client.rs  uptime_kuma_client.rs
crates/lab-auth/: Cargo.toml
crates/lab-auth/src/: authorize.rs  config.rs  error.rs  google.rs  jwt.rs  lib.rs  metadata.rs  routes.rs  session.rs  sqlite.rs  state.rs  test_support.rs  token.rs  types.rs  util.rs
crates/lab/examples/: spike_rmcp_auth_client.rs
crates/lab/src/: CLAUDE.md  acp.rs  api.rs  audit.rs  catalog.rs  cli.rs  config.rs  device.rs  dispatch.rs  docs.rs  lib.rs  main.rs  mcp.rs  node.rs  oauth.rs  output.rs  registry.rs  scaffold.rs  services.rs  test_support.rs  tui.rs
crates/lab/tests/: acp_backend_contract.rs  acp_docker_provider_config.rs  api_fs_headers.rs  architecture_orchestrator.rs  auth_admin_api.rs  deploy_dispatch.rs  deploy_runner.rs  device_api.rs  device_cli.rs  device_config.rs  device_identity.rs  device_master_only.rs  device_queue.rs  device_runtime.rs  device_scan.rs  logs_api.rs  logs_cli.rs  logs_dispatch.rs  node_config.rs  node_identity.rs  node_queue.rs  nodes_api.rs  nodes_cli.rs  nodes_master_only.rs  nodes_runtime.rs  upstream_oauth.rs
tools/gh-webhook/: Cargo.toml  README.md
tools/gh-webhook/scripts/: install-systemd.sh
tools/gh-webhook/src/: config.rs  debounce.rs  dedup.rs  events.rs  flush.rs  github.rs  handlers.rs  hmac.rs  jsonl.rs  lib.rs  main.rs  render.rs
tools/gh-webhook/systemd/: gh-webhook.service
tools/gh-webhook/tests/: config_test.rs  debounce_test.rs  dedup_test.rs  events_test.rs  flush_test.rs  github_test.rs  handlers_test.rs  hmac_test.rs  jsonl_test.rs  render_test.rs
(+9062 files in other folders)
