[workspace]
resolver = "3"
members  = ["crates/lab-apis", "crates/lab"]

[workspace.package]
version      = "0.3.2"
edition      = "2024"
rust-version = "1.90"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/jmagar/lab"
authors      = ["jmagar"]

[workspace.dependencies]
# runtime
tokio        = { version = "1.51", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util", "io-std", "time"] }
futures      = "0.3"

# http / serde / errors
reqwest      = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "stream", "form", "multipart"] }
base64       = "0.22"
url          = { version = "2", features = ["serde"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
anyhow       = "1"

# time
jiff         = { version = "0.2", features = ["serde"] }

# logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# cli / output
clap         = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tabled       = "0.20"
owo-colors   = "4"
is-terminal  = "0.4"
indicatif    = "0.18"
dialoguer    = { version = "0.12", default-features = false }

# config
dotenvy      = "0.15"
toml         = "1.1"

# tui
ratatui      = "0.30.0"
crossterm    = "0.29"

# mcp
rmcp         = { version = "1.4", features = [
  "server",
  "macros",
  "transport-io",
  "transport-streamable-http-server",
  "client",
  "auth",
  "transport-streamable-http-client-reqwest",
  "elicitation",
  "schemars",
] }

# http server (lab binary only)
axum         = { version = "0.8", features = ["macros", "json", "tokio", "http2"] }
tower        = { version = "0.5", features = ["util"] }
tower-http   = { version = "0.6", features = ["trace", "cors", "compression-gzip", "timeout", "request-id"] }

# extract (always compiled — synthetic service)
russh        = "0.60.0"
russh-sftp   = "2.1.1"
russh-config = "0.58.0"
quick-xml    = { version = "0.39.2", features = ["serialize"] }

# tests
wiremock     = "0.6"
insta        = { version = "1", features = ["json", "yaml"] }

[workspace.lints.rust]
# TODO(docs-pass): re-enable once every service has real types + docstrings.
# Tracked in docs/superpowers/plans/ (follow-up after all 21 services land).
missing_docs                = "allow"
unsafe_code                 = "forbid"
unreachable_pub             = "warn"
rust_2018_idioms            = { level = "warn", priority = -1 }
rust_2024_compatibility     = { level = "warn", priority = -1 }
let_underscore_drop         = "warn"
trivial_casts               = "warn"
trivial_numeric_casts       = "warn"
unused_lifetimes            = "warn"
unused_qualifications       = "warn"

[workspace.lints.clippy]
pedantic     = { level = "warn", priority = -1 }
nursery      = { level = "warn", priority = -1 }
cargo        = { level = "warn", priority = -1 }
unwrap_used  = "warn"
expect_used  = "warn"
panic        = "warn"
todo         = "warn"
unimplemented = "warn"
dbg_macro    = "warn"
print_stdout = "warn"
print_stderr = "warn"
mod_module_files = "warn"   # forbid mod.rs — enforce foo.rs sibling to foo/ style

# allow some pedantic noise
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
multiple_crate_versions = "allow"
# TODO(stubs): re-enable once every service's real impl calls self.http — these
# fire on stub method bodies that will become async the moment the HTTP call lands.
unused_async            = "allow"

[profile.release]
lto              = "thin"
codegen-units    = 1
strip            = "symbols"
panic            = "abort"
opt-level        = 3
debug            = false
incremental      = false

[profile.dev]
opt-level = 0
debug     = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release-debug]
inherits = "release"
debug    = true
strip    = "none"
