[package]
name = "lab-apis"
description = "Pure Rust SDK for homelab service APIs (Servarr, Plex, qBittorrent, Unraid, UniFi, etc.)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["homelab", "mcp", "cli", "sdk"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
base64.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jiff.workspace = true
tracing.workspace = true
percent-encoding.workspace = true
russh = { workspace = true, optional = true }
russh-sftp = { workspace = true, optional = true }
russh-config = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tempfile.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [
  "test-util",
  "macros",
  "rt-multi-thread",
] }
wiremock.workspace = true
insta.workspace = true

[features]
acp_registry = []
all = [
  "deploy",
  "mcpregistry",
  "acp_registry",
  "extract",
]
default = []
deploy = []
extract = [
  "dep:russh",
  "dep:russh-sftp",
  "dep:russh-config",
  "dep:quick-xml",
  "dep:rusqlite",
]
mcpregistry = []
test-utils = []
[lints]
workspace = true
