[package]
name                   = "lab-auth"
description            = "Pure axum/auth/storage crate for lab."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
axum.workspace         = true
jsonwebtoken.workspace = true
rand.workspace         = true
rusqlite.workspace     = true
serde.workspace        = true
thiserror.workspace    = true
