[package]
name                   = "lab"
description            = "Pluggable homelab CLI + MCP server. One binary, 21 services, runtime tool selection."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme                 = "../../README.md"
keywords               = ["homelab", "mcp", "cli", "tui"]
categories             = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lab"
path = "src/main.rs"

[dependencies]
lab-apis           = { path = "../lab-apis", default-features = false }

tokio                        = { workspace = true, features = ["process"] }
futures.workspace            = true
reqwest.workspace            = true
url.workspace                = true
serde.workspace              = true
serde_json = { workspace = true, features = ["preserve_order"] }
anyhow.workspace             = true
thiserror.workspace          = true
jiff.workspace               = true

tracing.workspace            = true
tracing-subscriber.workspace = true

clap.workspace               = true
clap_complete.workspace      = true
tabled.workspace             = true
owo-colors.workspace         = true
is-terminal.workspace        = true
indicatif.workspace          = true
dialoguer.workspace          = true

dotenvy.workspace            = true
toml.workspace               = true

ratatui.workspace            = true
crossterm.workspace          = true

base64.workspace             = true
fd-lock                      = "4"
tempfile                     = "3.10"
subtle                       = "2"
indexmap                     = { version = "2", features = ["serde"] }
secrecy                      = "0.8"
sha2                         = "0.10"
tokio-util                   = { version = "0.7", features = ["rt"] }
strip-ansi-escapes           = "0.2"

rmcp.workspace               = true

axum.workspace               = true
tower.workspace              = true
tower-http.workspace         = true

[dev-dependencies]
wiremock.workspace           = true

[features]
default = ["all"]

# media stack
radarr      = ["lab-apis/radarr"]
sonarr      = ["lab-apis/sonarr"]
prowlarr    = ["lab-apis/prowlarr"]
overseerr   = ["lab-apis/overseerr"]
plex        = ["lab-apis/plex"]
tautulli    = ["lab-apis/tautulli"]
sabnzbd     = ["lab-apis/sabnzbd"]
qbittorrent = ["lab-apis/qbittorrent"]

# network / infrastructure
tailscale   = ["lab-apis/tailscale"]
unraid      = ["lab-apis/unraid"]
unifi       = ["lab-apis/unifi"]
arcane      = ["lab-apis/arcane"]

# notes / docs / bookmarks
linkding    = ["lab-apis/linkding"]
memos       = ["lab-apis/memos"]
bytestash   = ["lab-apis/bytestash"]
paperless   = ["lab-apis/paperless"]

# notifications
gotify      = ["lab-apis/gotify"]
apprise     = ["lab-apis/apprise"]

# ai / vector / inference
openai      = ["lab-apis/openai"]
qdrant      = ["lab-apis/qdrant"]
tei         = ["lab-apis/tei"]

# internal admin / onboarding tooling
# Intentionally local-only — no lab-apis counterpart, lab_admin performs
# filesystem audits only and has no external HTTP service to wrap.
lab-admin   = []

all         = [
  "lab-apis/all",
  "radarr",
  "sonarr",
  "prowlarr",
  "overseerr",
  "plex",
  "tautulli",
  "sabnzbd",
  "qbittorrent",
  "tailscale",
  "unraid",
  "unifi",
  "arcane",
  "linkding",
  "memos",
  "bytestash",
  "paperless",
  "gotify",
  "apprise",
  "openai",
  "qdrant",
  "tei",
  "lab-admin",
]

[lints]
workspace = true
