[package]
name                   = "lab"
description            = "Pluggable homelab CLI + MCP server. One binary, 21 services, runtime tool selection."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme                 = "../../README.md"
keywords               = ["homelab", "mcp", "cli", "tui"]
categories             = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lab"
path = "src/main.rs"

[dependencies]
lab-apis           = { path = "../lab-apis", default-features = false }
lab-auth           = { path = "../lab-auth" }

tokio                        = { workspace = true, features = ["process"] }
process-wrap                 = { version = "9.1.0", default-features = false, features = ["tokio1", "process-group"] }
nix                          = { version = "0.29", default-features = false, features = ["signal", "process"] }
futures.workspace            = true
reqwest.workspace            = true
url.workspace                = true
serde.workspace              = true
serde_json = { workspace = true, features = ["preserve_order"] }
anyhow.workspace             = true
thiserror.workspace          = true
jiff.workspace               = true

tracing.workspace            = true
tracing-subscriber.workspace = true

clap.workspace               = true
clap_complete.workspace      = true
tabled.workspace             = true
owo-colors.workspace         = true
is-terminal.workspace        = true
indicatif.workspace          = true
dialoguer.workspace          = true
console.workspace            = true

dotenvy.workspace            = true
toml.workspace               = true

ratatui.workspace            = true
crossterm.workspace          = true

base64.workspace             = true
fd-lock                      = "4"
tempfile                     = "3.10"
subtle                       = "2"
indexmap                     = { version = "2", features = ["serde"] }
secrecy                      = "0.8"
sha2                         = "0.10"
chacha20poly1305             = "0.10"
dashmap                      = "6"
tokio-util                   = { version = "0.7", features = ["rt", "compat"] }
strip-ansi-escapes           = "0.2"
agent-client-protocol        = "0"

# optional — deploy feature
hex                          = { version = "0.4", optional = true }
regex                        = { version = "1", optional = true }

rmcp.workspace               = true
jsonwebtoken.workspace       = true
rusqlite.workspace           = true
r2d2                         = "0.8"
r2d2_sqlite                  = "0.33"
uuid.workspace               = true

axum.workspace               = true
tower.workspace              = true
tower-http.workspace         = true
utoipa.workspace             = true
utoipa-scalar.workspace      = true

oauth2                       = { version = "5.0", default-features = false }
tokio-tungstenite            = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
wiremock.workspace           = true

[lib]
path = "src/lib.rs"

[features]
default = ["all"]

# media stack
radarr      = ["lab-apis/radarr"]
sonarr      = ["lab-apis/sonarr"]
prowlarr    = ["lab-apis/prowlarr"]
overseerr   = ["lab-apis/overseerr"]
plex        = ["lab-apis/plex"]
tautulli    = ["lab-apis/tautulli"]
sabnzbd     = ["lab-apis/sabnzbd"]
qbittorrent = ["lab-apis/qbittorrent"]

# network / infrastructure
tailscale   = ["lab-apis/tailscale"]
unraid      = ["lab-apis/unraid"]
unifi       = ["lab-apis/unifi"]
arcane      = ["lab-apis/arcane"]

# notes / docs / bookmarks
linkding    = ["lab-apis/linkding"]
memos       = ["lab-apis/memos"]
bytestash   = ["lab-apis/bytestash"]
paperless   = ["lab-apis/paperless"]

# notifications
gotify      = ["lab-apis/gotify"]
apprise     = ["lab-apis/apprise"]

# bootstrap / registry
mcpregistry = ["lab-apis/mcpregistry"]

# ai / vector / inference
openai      = ["lab-apis/openai"]
qdrant      = ["lab-apis/qdrant"]
tei         = ["lab-apis/tei"]

# deploy — push the local lab release binary to SSH targets
deploy      = ["lab-apis/deploy", "dep:hex", "dep:regex"]

# internal admin / onboarding tooling
# Intentionally local-only — no lab-apis counterpart, lab_admin performs
# filesystem audits only and has no external HTTP service to wrap.
lab-admin   = []

# Expose test-only helpers (RecordingIo, orchestrate_with_io) to external
# integration-test crates.  Never enable in production builds.
test-utils  = []

all         = [
  "lab-apis/all",
  "radarr",
  "sonarr",
  "prowlarr",
  "overseerr",
  "plex",
  "tautulli",
  "sabnzbd",
  "qbittorrent",
  "tailscale",
  "unraid",
  "unifi",
  "arcane",
  "linkding",
  "memos",
  "bytestash",
  "paperless",
  "gotify",
  "apprise",
  "openai",
  "qdrant",
  "tei",
  "lab-admin",
  "deploy",
  "mcpregistry",
]

[lints]
workspace = true
