[workspace]

[package]
name = "gh-webhook"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "gh-webhook"
path = "src/main.rs"

[[bin]]
name = "gh-webhook-register"
path = "src/bin/register.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
libc = "0.2"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
